# TAMPA

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-MIT  PR_BODY.md  README.md  package-lock.json  package.json  pr_body_ci.txt  pr_body_feat_add_ci.txt  pr_body_mcp_metrics.txt  pr_body_mcp_vector.txt  pr_body_validator.txt  pyproject.toml  requirements-vector.txt  requirements.txt  tsconfig.json
.github/workflows/: blank.yml  ci.yml  vector-tests.yml
compose/: docker-compose.yml
configs/: acceptance_policy_v1.json  authority_v1.json  canon_change_policy.json  canonicalizer_guidance.txt  mcp_integration_guide.txt  reviewer_assistant_prompt.txt  tampa_parser_instructions.txt  tampa_prompt_v1.txt  tampa_user_template.txt
data/human_reviews/: ticket-0001.json
datanet/: canonicalize_v1.py
docker/: app.Dockerfile
docs/: README.md  RUNNING_LOCALLY.md  SIGNING_HOWTO.md
docs/EXAMPLES/: tc-ja-001-job.json
examples/: mcp_call_example.py  mcp_fncall_example.py
mcp/: vector_search.py
scripts/: build_faiss_index.py  build_mcp_index.py  create_and_push_scaffold.sh  create_vector_pr.sh  sign_decision.sh  tampa-ci-gate.ts
src/: __init__.py  a11.ts  a12.ts  a6.ts
src/datanet/: __init__.py  (+12 more)
tests/: __init__.py  a11.test.ts  a12.test.ts  a6.test.ts  test_canonicalize.py  test_compare_tampa.py  test_mcp.py  test_mcp_adapter.py  test_mcp_auth.py  test_mcp_fncall.py  test_mcp_functions.py  test_mcp_metrics.py  test_mcp_search.py  test_mcp_vector.py  test_validate_tampa.py  tests_validate_tampa_strict.py
vectors/: a11.vectors.json  a12.vectors.json  a6.vectors.json
(+11 files in other folders)
