[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tampa-mcp"
version = "0.1.0"
description = "TAMPA MCP with authentication and guards"
requires-python = ">=3.9"
dependencies = []

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
